--- a/frontend/src/app/components/registration-process/registrationpage/registrationpage.component.html
+++ b/frontend/src/app/components/registration-process/registrationpage/registrationpage.component.html
@@ -127,3 +127,6 @@
     <!-- submit -->
     <button mat-raised-button color='primary'>Register</button>
   </form>
+  <div class="container-fluid" style="height: 100%; padding: 1%; background-color: white;" *ngIf='sessionState'>
+    <h2>You are already registered</h2>
+  </div>
