--- a/frontend/src/app/components/venue/venue.component.scss
+++ b/frontend/src/app/components/venue/venue.component.scss
@@ -1,11 +1,17 @@
 button:focus {
-    outline: none;
-}
-#img{
-  width: auto;
-  height: 100%;
-}
-#imgTile{
-  background-color: rgba($color: #2c2222, $alpha: 1.0);
+  outline: none;
 }
 
+.star {
+  position: relative;
+  display: inline-block;
+  font-size: 3rem;
+  color: #e0dfdf;
+}
+
+.half {
+  position: absolute;
+  display: inline-block;
+  overflow: hidden;
+  // color: red;
+}
