added filter and removed returnsearch error

--- a/frontend/src/app/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/search-bar/search-bar.component.html
@@ -2,12 +2,12 @@
 <div class="container-fluid" style="background-color: rgba(255, 255, 255, 0.9);">
   <form (submit)='onSubmit(search.value)' class='form row' style="width: 100%;">
     <mat-form-field class="input col" appearance="standard">
-      <input matInput #search 
+      <input matInput #search
         (keyup)='onKey(search.value)'
-        class='form-control input' 
+        class='form-control input'
         type='search'
         placeholder='ex: restaurant'
-        aria-label='Search' 
+        aria-label='Search'
         autocomplete='off'>
       <i fas fa-search aria-hidden="true"></i>
       <mat-label>Search</mat-label>
@@ -15,9 +15,9 @@
     <mat-form-field class="col-auto align-self-center">
       <mat-label>Filter</mat-label>
       <mat-select [value]='select'>
-        <mat-option value="all">All</mat-option>
-        <mat-option value="venues">Venues</mat-option>
-        <mat-option value="users">Users</mat-option>
+        <mat-option value=0>All</mat-option>
+        <mat-option value=1>Venues</mat-option>
+        <mat-option value=2>Users</mat-option>
       </mat-select>
     </mat-form-field>
   </form>
