--- a/frontend/src/app/components/tabs/searchresults/search/search.component.html
+++ b/frontend/src/app/components/tabs/searchresults/search/search.component.html
@@ -7,9 +7,10 @@
     </mat-card-header>
 
     <mat-card-content class="container">
-      <p>
-        {{searchResult.address.address}}
-      </p>
+      <span *ngFor='let item of searchResult.address.formattedAddress'>
+        {{ item }}
+      </span>
+      <button mat-mini-fab><mat-icon> location_on</mat-icon></button>
     </mat-card-content>
 
   </mat-card>
