--- a/frontend/src/app/components/tabs/searchresults/search/search.component.scss
+++ b/frontend/src/app/components/tabs/searchresults/search/search.component.scss
@@ -1,6 +1,8 @@
 mat-card{
   display: flex;
 }
-button{
-  min-width: -webkit-fill-available;
+ 
+mat-card-header:hover, #description:hover, mat-icon:hover {
+  cursor: pointer;
 }
+
