--- a/frontend/src/app/components/tabs/searchresults/search/search.component.html
+++ b/frontend/src/app/components/tabs/searchresults/search/search.component.html
@@ -1,33 +1,39 @@
-<button type="button" class="btn" (click)='navigate()' *ngIf="searchResult.type == 'venue'">
+<button type="button" class="btn" (click)='navigate()' *ngIf="searchResult.venue">
   <mat-card>
 
     <mat-card-header>
-      <mat-card-title>{{searchResult.name}}</mat-card-title>
-      <mat-card-subtitle>{{searchResult.category}}</mat-card-subtitle>
+      <mat-card-title>{{searchResult|null:['venue','name']}}</mat-card-title>
+      <mat-card-subtitle>
+        <div *ngFor="let item of (searchResult|null: ['venue','categories'])">
+          {{item.name}}
+        </div>
+      </mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content class="container">
       <p>
-        {{searchResult.address.address}}
+        {{searchResult|null:['venue','location','address']}}
       </p>
     </mat-card-content>
 
   </mat-card>
 </button>
 
-<button type="button" class="btn" (click)='navigate()' *ngIf="searchResult.type == 'user'">
+
+<button type="button" class="btn" (click)='navigate()' *ngIf="searchResult.username">
   <mat-card>
 
     <mat-card-header>
-      <mat-card-title>{{searchResult.firstname}} {{searchResult.lastname}}</mat-card-title>
+      <mat-card-title>{{searchResult|null:['firstname']}} {{searchResult|null:['lastname']}}</mat-card-title>
     </mat-card-header>
     <mat-card-content class="container">
-      <div>{{searchResult.username}}</div>
+      <div>{{searchResult|null: ['username']}}</div>
       <div>
-        <p *ngFor="let item of searchResult.history">{{item}}</p>
+        <!-- dunno why these dont work -->
+        <!-- <p *ngFor="let item of searchResult|null:['history']">{{item}}</p> -->
       </div>
       <div>
-        <p *ngFor="let item of searchResult.wishlist">{{item}}</p>
+        <!-- <p *ngFor="let item of searchResult|null:['whishlist']">{{item}}</p> -->
       </div>
     </mat-card-content>
 
