--- a/frontend/src/app/components/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/tabs/searchresults/searchresults.component.html
@@ -1,7 +1,16 @@
 <div *ngIf="openTab.content" >
-  <div id  *ngFor="let result of openTab.content">
-    <app-search [result]="result">
-    </app-search>
+
+  <div *ngIf="select===1">
+    <div *ngFor="let result of openTab.content.venues">
+      <app-search [result]="result">
+      </app-search>
+    </div>
+  </div>
+  <div *ngIf="select===0">
+    <div *ngFor="let result of openTab.content.users">
+      <app-search [result]="result">
+      </app-search>
+  </div>
   </div>
 </div>
-
+<button (click)='click()'></button>
