--- a/frontend/src/app/components/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/search-bar/search-bar.component.html
@@ -14,7 +14,7 @@
     </mat-form-field>
     <mat-form-field class="col-auto align-self-center">
       <mat-label>Filter</mat-label>
-      <mat-select [value]='select'>
+      <mat-select [value]='select' (selectionChange)='changeFilter($event)'>
         <mat-option value=0>All</mat-option>
         <mat-option value=1>Venues</mat-option>
         <mat-option value=2>Users</mat-option>
