--- a/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
+++ b/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
@@ -1,1 +1,13 @@
-<p>add-venue-popover works!</p>
+<form>
+    <mat-form-field appearance='outline'>
+        <mat-label>Custom Venue</mat-label>
+        <input matInput type="text" >
+    </mat-form-field>
+    <br>
+    <b class="justify-content-center">or</b>
+    <br>
+    <mat-form-field appearance='outline'>
+        <mat-label>Search in Database</mat-label>
+        <input matInput type="text" >
+    </mat-form-field>
+</form>
