fixed recompile only local server

--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -63,7 +63,7 @@
 
         <!-- sidebar content -->
         <div class="container-fluid" style="width: 98%; max-height: 95%; padding: 0; padding-top: 1%; padding-top: 0; margin-left: 0; margin-right: 0; overflow-y: auto;">
-            <router-outlet></router-outlet>
+            <router-outlet style="height: 100%;"></router-outlet>
         </div>
     </mat-drawer>
 </mat-drawer-container>
