--- a/frontend/src/app/components/registration-process/country-selector/country-selector.component.html
+++ b/frontend/src/app/components/registration-process/country-selector/country-selector.component.html
@@ -1,22 +1,6 @@
 <form class="example-form row align-items-center">
-    <mat-form-field class="example-full-width" class="col">
-        <mat-label>Search Locations</mat-label>
-        <input type='text' 
-        matInput
-        placeholder="Ex. Berlin"
-        [matAutocomplete]="auto"
-        [formControl]="myControl"
-        [(ngModel)]='value'>
-        <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-            <mat-icon>close</mat-icon>
-        </button>
-        <mat-autocomplete #auto='matAutocomplete' (optionSelected)='onSelected($event)'>
-            <mat-spinner *ngIf='isLoading' style="margin:0 auto;"></mat-spinner>
-            <mat-option *ngFor='let coutry of autoSuggestCountries | async' [value]='coutry.name' (click)='passData(coutry)'>
-                <span>{{ coutry.name }}</span>
-            </mat-option>
-        </mat-autocomplete>
-    </mat-form-field>
+    <!-- city search autocomplete -->
+    <app-city-search #citySearch class="col"></app-city-search>
     <div class="col-auto mr-auto">
         <span><strong>Or</strong></span>
     </div>
@@ -24,8 +8,8 @@
         <button mat-button><span>Click on the map</span></button>
     </div>
 </form>
-<img *ngIf='!myControl.dirty' src="https://img.icons8.com/bubbles/100/000000/geography.png" class="img" style="margin-left: 25%;">
-<small *ngIf='!myControl.dirty'><a href="https://icons8.com/icon/113643/geography">Geography icon by Icons8</a></small>
+<!-- <img *ngIf='!citySearchComponent.myControl.dirty' src="https://img.icons8.com/bubbles/100/000000/geography.png" class="img" style="margin-left: 25%;">
+<small *ngIf='!citySearchComponent.myControl.dirty'><a href="https://icons8.com/icon/113643/geography">Geography icon by Icons8</a></small> -->
 
 <div id="mainList" #mainlist [hidden]='Place.places.length == 0? true:false' *ngFor="let Place of allPlaces, let i = index">
     <button mat-raised-button  class="mat-chip-list-stacked" aria-orientation="vertical">
