--- a/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
+++ b/frontend/src/app/components/tabs/mytrip/add-venue-popover/add-venue-popover.component.html
@@ -1,33 +1,52 @@
-<!-- <mat-card>
+    <mat-card>
     <mat-card-header>
         <mat-card-title>Add Venue</mat-card-title>
     </mat-card-header>
     <br>
     <mat-card-content>
-
         <form>
-            <mat-form-field appearance='outline' style="margin: 0; padding: 0;">
-                <mat-label>Custom Venue</mat-label>
-                <input matInput type="text" >
-            </mat-form-field>
-            <hr>
-            <mat-form-field appearance='outline'>
-                <mat-label>Search in Database</mat-label>
-                <input matInput type="text" >
-            </mat-form-field>
+            <mat-tab-group dynamicHeight mat-align-tabs="center">
+                <!-- Search Venue -->
+                <mat-tab>
+                    <ng-template mat-tab-label>
+                        <label matTooltip="Search Venue in Database">Search</label>
+                    </ng-template>
+                    <br>
+                    <mat-form-field appearance='outline' style="margin: 0; padding: 0;">
+                        <mat-label>Search Venue</mat-label>
+                        <input matInput type="text" >
+                    </mat-form-field>
+                    <br>
+                    <button mat-raised-button color='primary'>Search</button>
+                </mat-tab>
+                <!-- Custom Venue -->
+                <mat-tab>
+                    <ng-template mat-tab-label>
+                        <label matTooltip="Add Custom Venue">Custom</label>
+                    </ng-template>
+                    <br>
+                    <mat-form-field appearance='outline'>
+                        <mat-label>Venue Name</mat-label>
+                        <input matInput type="text">
+                    </mat-form-field>
+                    <mat-form-field appearance='outline' style="display: inline-block">
+                        <mat-label>City</mat-label>
+                        <input matInput type='text' autocomplete="country">
+                    </mat-form-field>
+                    <mat-form-field appearance='outline' style="display: inline-block">
+                        <mat-label>Adress</mat-label>
+                        <input matInput type='text' autocomplete="street-address">
+                    </mat-form-field>
+                    <mat-form-field appearance='outline'>
+                        <mat-label>Price</mat-label>
+                        <input matInput type='number'>
+                    </mat-form-field>
+                    <br>
+                    <button mat-raised-button matTooltip='add custom Venue' color='primary'>Add</button>
+                </mat-tab>
+            </mat-tab-group>
         </form> 
     </mat-card-content>
     <mat-card-actions>
-        <button mat-flat-button matTooltip='add custom Venue'>Add</button>
-        <button mat-raised-button color='primary'>Search</button>
     </mat-card-actions>
-</mat-card> -->
-
-<mat-tab-group dynamicHeight mat-align-tabs="center">
-    <mat-tab label="Search" matTooltip='Search Venue in Database'>
-    
-    </mat-tab>
-    <mat-tab label="Custom" matTooltip='Add a Custom Venue'>
-        
-    </mat-tab>
-</mat-tab-group>
+</mat-card>
