--- a/frontend/src/app/components/tabs/mytrip/mytrip.component.html
+++ b/frontend/src/app/components/tabs/mytrip/mytrip.component.html
@@ -33,7 +33,7 @@
                             <ng-template #popcontent><app-add-venue-popover></app-add-venue-popover></ng-template>
                             <div id="lineBtn">
                                 <hr id="hrBtn">
-                                <button mat-mini-fab id="addIcon" [ngbPopover]='popcontent' placement="bottom" [autoClose]="false">
+                                <button mat-mini-fab id="addIcon" [ngbPopover]='popcontent' placement="bottom" autoClose="outside">
                                     <mat-icon id='addIcon'>add_location</mat-icon>
                                 </button>
                                 <hr id="hrBtn">
