--- a/frontend/src/app/components/tabs/searchresults/searchresults.component.html
+++ b/frontend/src/app/components/tabs/searchresults/searchresults.component.html
@@ -1,3 +1,4 @@
+<mat-spinner *ngIf="loading"></mat-spinner>
 <div *ngIf="openTab.content" >
   <div *ngIf="checkFilter(1)">
     <div *ngFor="let result of openTab.content.venues">
